--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "dependencies": {},
   "devDependencies": {
     "chai": "^4.2.0",
+    "coveralls": "^3.0.4",
     "jscs": "^3.0.7",
     "jshint": "^2.8.0",
     "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
     "posthtml": "^0.11.4"
   },
   "scripts": {
-    "test": "npm run lint && mocha",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "test": "npm run lint && nyc mocha",
     "lint": "jshint . && jscs . -v"
   },
   "repository": {
